# atramhasis

./: .coveragerc  .gitattributes  .gitignore  .pre-commit-config.yaml  .pyup.yml  .readthedocs.yaml  .scrutinizer.yml  .travis.yml  CHANGES.rst  CHANGES.txt  CITATION.cff  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  README.rst  README.txt  alembic.ini  atramhasis.sqlite  build_hook.py  development.ini  message-extraction.ini  messages.mo  production.ini  pyproject.toml  pyproject.toml.orig  requirements-dev-base.txt  requirements-dev.txt  requirements.txt  setup.cfg  setup.py  tox.ini
.github/workflows/: atramhasis_backend.yaml  backend.yaml  draft-pdf.yml  verify_dist.yml
alembic/: env.py
alembic/versions/: 3924a7ad2f8_init.py
atramhasis/: __init__.py  audit.py  db.py  errors.py  mappers.py  models.py  openapi.yaml  protected_resources.py  rdf.py  renderers.py  routes.py  security.py  service.py  tests.py  utils.py  validators.py  views.py
atramhasis/alembic/: env.py
atramhasis/cache/: __init__.py
atramhasis/data/: __init__.py  data_transfer_objects.py  datamanagers.py  db.py  models.py
atramhasis/json_processors/: provider.py
atramhasis/locale/: atramhasis.pot
atramhasis/scaffolds/: __init__.py
atramhasis/scripts/: createTestData.py  delete_scheme.py  dump_rdf.py  generate_ldf_config.py  import_file.py  import_rdf.py  initializedb.py  migrate_sqlalchemy_providers.py  migrate_sqlalchemyproviders.py  sitemap_generator.py
atramhasis/skos/: __init__.py
atramhasis/static/: bower.json  config.rb  package-lock.json  package.json
atramhasis/templates/: admin.jinja2  admin_old.jinja2  admin_placeholder.jinja2  atramhasis.jinja2  base.jinja2  browse_schemes_sidebar.jinja2  concept.jinja2  conceptscheme.jinja2  conceptschemes.jinja2  conceptschemes_overview.jinja2  d3cloud.jinja2  error.jinja2  footer-main.jinja2  footer-page.jinja2  foundation.jinja2  header-main.jinja2  header-page.jinja2  home.jinja2  layout-main.jinja2  layout-page.jinja2  layout.jinja2  macros.jinja2  mytemplate.pt  notfound.jinja2  scheme_tree.jinja2  search_form.jinja2  search_result.jinja2  staticbase.jinja2  staticlayout-main.jinja2  staticlayout-page.jinja2  staticlayout.jinja2  subfooter-main.jinja2  subfooter-page.jinja2  (+3 more)
cookiecutter/: README.rst
cookiecutters/demo/{{cookiecutter.root_folder}}/: MANIFEST.in  README.rst  alembic.ini  development.ini  pyproject.toml  requirements-dev.txt
cookiecutters/demo/{{cookiecutter.root_folder}}/{{cookiecutter.python_package}}/: __init__.py  event_handlers.py
cookiecutters/demo/{{cookiecutter.root_folder}}/{{cookiecutter.python_package}}/locale/: atramhasis.pot
cookiecutters/demo/{{cookiecutter.root_folder}}/{{cookiecutter.python_package}}/locale/en/LC_MESSAGES/: atramhasis.mo  atramhasis.po
cookiecutters/demo/{{cookiecutter.root_folder}}/{{cookiecutter.python_package}}/locale/fr/LC_MESSAGES/: atramhasis.po
cookiecutters/demo/{{cookiecutter.root_folder}}/{{cookiecutter.python_package}}/skos/: __init__.py
cookiecutters/demo/{{cookiecutter.root_folder}}/{{cookiecutter.python_package}}/static/: package.json
cookiecutters/demo/{{cookiecutter.root_folder}}/{{cookiecutter.python_package}}/static/css/: app.css  print.css
cookiecutters/demo/{{cookiecutter.root_folder}}/{{cookiecutter.python_package}}/static/js/: app.js
cookiecutters/demo/{{cookiecutter.root_folder}}/{{cookiecutter.python_package}}/static/scss/: _{{cookiecutter.python_package}}-admin.scss  _{{cookiecutter.python_package}}-settings.scss  _{{cookiecutter.python_package}}.scss  app-admin.scss  app.scss
cookiecutters/demo/{{cookiecutter.root_folder}}/{{cookiecutter.python_package}}/static/scss/atramhasis/: _atramhasis-custom.scss  _atramhasis-home.scss  _atramhasis-settings.scss
cookiecutters/scaffold/{{cookiecutter.repo}}/: README.rst  development.ini  pyproject.toml
cookiecutters/scaffold/{{cookiecutter.repo}}/{{cookiecutter.package}}/: __init__.py
cookiecutters/scaffold/{{cookiecutter.root_folder}}/: CHANGES.txt  README.rst  alembic.ini  development.ini  pyproject.toml
cookiecutters/scaffold/{{cookiecutter.root_folder}}/{{cookiecutter.python_package}}/: __init__.py
demo_docker/: Dockerfile  atramhasis.conf
docs/: Makefile  make.bat
fixtures/: LICENSE.rst  bluebirds.py  bluebirds_data.py  convert_oe.py  data.py  dcat.ttl  eventtypes.py  eventtypes_data.py  heritagetypes.py  heritagetypes_data.py  materiaal_data.py  materials.py  periods.py  periods_data.py  species.py  species_data.py  stijl_data.py  styles_and_cultures.py
frontend/: .gitignore  .prettierrc.json  README.md  eslint.config.ts  index.html  package.json  pnpm-lock.yaml  tsconfig.app.json  tsconfig.node.json  vite.config.ts
lockfiles/: requirements-dev-py3.10.txt  requirements-dev-py3.11.txt  requirements-dev-py3.12.txt  requirements-dev-py3.13.10.txt
paper/: paper.bib  paper.md
scripts/: compile-requirements.sh
tests/: __init__.py  conf_test.ini  conftest.py  test_audit.py  test_config.py  test_datamanagers.py  test_errors.py  test_functional.py  test_health.py  test_import_scripts.py  test_mappers.py  test_protected_resources.py  test_rdf.py  test_renderes.py  test_scaffold.py  test_script_delete_scheme.py  test_skos.py  test_static.py  test_utils.py  test_validation.py  test_views.py
(+379 files in other folders)
