[build-system]
requires = ["hatchling", "hatch-fancy-pypi-readme"]
build-backend = "hatchling.build"

[project]
name = "{{ cookiecutter.python_package }}"
description = "My atramhasis setup"
version = "0.0.1"

dependencies = [
    "atramhasis",
    "pyramid",
    "SQLAlchemy",
    "skosprovider",
    "skosprovider_getty",
]

[project.optional-dependencies]
dev = [
    "waitress",
    "pyramid_debugtoolbar",
]

[project.entry-points."paste.app_factory"]
main = "{{ cookiecutter.python_package }}:main"

[tool.hatch.metadata.hooks.fancy-pypi-readme]
content-type = "text/x-rst"
fragments = [
  { path = "README.rst" },
  { path = "CHANGES.rst" },
]